Fix broken style

--- a/bluesummer/assets/css/style.css
+++ b/bluesummer/assets/css/style.css
@@ -174,6 +174,10 @@ section {
 	background: transparent;
 }
 
+.navbar-transparent a {
+	color: #fff;
+}
+
 .navbar-absolute {
 	position: absolute;
 	top: 0;
@@ -462,6 +466,7 @@ section {
 	text-align: right;
 	color: #fff;
 	z-index: 10;
+}
 
 .film-header-bottom {
     align-items: flex-end !important;
@@ -513,7 +518,7 @@ section {
 /****
 ** Section Image 3
 **/
-.act{
+.act {
 	max-width: 50%;
 	width: auto;
 	display: block;
@@ -521,17 +526,17 @@ section {
   	margin-right: auto;
 }
 
-.main-page{
+.main-page {
 	margin: 10px auto;
 }
 
-.home{
+.home {
 	padding-right: 15px;
     padding-left: 15px;
 	margin-bottom: 40px;
 }
 
-.home a{
+.home a {
 
 	margin:20px;
 }
@@ -588,7 +593,7 @@ span.page-prev {
     /* width: 120px; */
 }
 span.page-next {
-        text-align: right;
+    text-align: right;
     float: right;
     width: 15%;
     margin: 0 10px;
